tests/ui/missing_endpoint.stderr
error: expected #[endpoint(...)] attribute on method
  --> tests/ui/missing_endpoint.rs:15:14
   |
15 |     async fn missing_endpoint(&self) -> Result<(), MyError>;
   |              ^^^^^^^^^^^^^^^^
